# rs-decode_struct

./: Cargo.toml  build.rs  decode.h  def.h
ffi-out/: dec.h  libdecode_struct.dylib
src/: jsonable.rs  lib.rs  main.rs  sft.rs  sft_attributes.rs  space.rs
src/sft/: decoded_sft_price.rs  sft_price.rs
src/space/: advertise_space.rs  decoded_advertise_space.rs
