[package]
name = "decode_struct"
description = "A simple script to decode a Struct from binary to base64
version = "0.1.0"
edition = "2021"

[[bin]]
name = "decode_struct"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multiversx-sc = "0.41.3"
multiversx-sc-codec = "0.17.2"
base64 = "0.21.2"
multiversx-chain-vm = "0.3.3"
serde = "1.0.167"
serde_json = "1.0.100"

# development deps
[dev-dependencies]
cross = "0.2.5"

# cross build --target aarch64-unknown-linux-gnu -r
# cross build --target x86_64-unknown-linux-gnu -r
# cargo build -r
